--- a/app/src/main/res/layout/activity_galery.xml
+++ b/app/src/main/res/layout/activity_galery.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".galery">
 
+    <Button
+        android:id="@+id/btnHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="266dp"
+        android:text="Home"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
