comprobacion y cambios en main y menu main para que salga bien en vertical y horizontal(en proceso)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_light"
-
+    android:background="@drawable/getxo"
     tools:context=".MainActivity">
 
 
@@ -13,83 +12,75 @@
         android:id="@+id/btnHasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_marginStart="139dp"
-        android:layout_marginEnd="157dp"
-        android:layout_marginBottom="41dp"
-        android:backgroundTint="#172dbd"
-
-        android:text="@string/hasi"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/btnHasi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />
 
 
     <ImageView
         android:id="@+id/txurdilogo"
-        android:layout_width="147dp"
-        android:layout_height="69dp"
+        android:layout_width="140dp"
+        android:layout_height="80dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/des_imgTx"
         android:scaleType="fitXY"
         android:src="@drawable/txurdilogo"
-        app:layout_constraintBottom_toTopOf="@+id/btnHasi"
-        app:layout_constraintEnd_toStartOf="@+id/unilogo"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/getxo" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.98" />
 
     <ImageView
         android:id="@+id/unilogo"
-        android:layout_width="141dp"
-        android:layout_height="69dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:contentDescription="@string/des_imgUpv"
+        android:layout_marginBottom="8dp"
         android:scaleType="fitXY"
         android:src="@drawable/unilogo"
-        app:layout_constraintBottom_toTopOf="@+id/btnHasi"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toEndOf="@+id/txurdilogo"
-        app:layout_constraintTop_toBottomOf="@+id/getxo" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.979" />
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/getxo"
-        android:layout_width="306dp"
+        android:layout_width="296dp"
         android:layout_height="210dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="38dp"
         android:scaleType="fitXY"
         android:src="@drawable/getxo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        tools:layout_editor_absoluteX="44dp"
+        tools:layout_editor_absoluteY="37dp" />-->
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="274dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="58dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginBottom="9dp"
-        android:text="Getxoko historia eta ondareak"
-        android:textSize="20dp"
-        android:textStyle="bold|italic"
-
-        app:layout_constraintBottom_toTopOf="@+id/getxo"
+        android:id="@+id/textViewTitulo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="42dp"
+        android:layout_marginEnd="42dp"
+        android:contentDescription="@string/des_text"
+        android:text="@string/desc_main"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
 
