comprobacion y cambios en main y menu main para que salga bien en vertical y horizontal(finalizado)

--- a/app/src/main/res/layout-land/activity_menu_main.xml
+++ b/app/src/main/res/layout-land/activity_menu_main.xml
@@ -13,19 +13,18 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
         <Button
             android:id="@+id/btnIbilbidea"
-            android:layout_width="260dp"
+            android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_marginStart="100dp"
-            android:layout_marginTop="116dp"
-            android:layout_marginEnd="50dp"
-            android:text="Ibilbidea"
+            android:layout_marginTop="80dp"
+            android:layout_marginEnd="100dp"
+            android:text="@string/text_Ibilbidea"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -34,12 +33,12 @@
 
         <Button
             android:id="@+id/btnGaleria"
-            android:layout_width="260dp"
+            android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:layout_marginStart="62dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="60dp"
-            android:text="Galeria"
+            android:layout_marginEnd="100dp"
+            android:text="@string/text_Galeria"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -48,13 +47,13 @@
 
         <Button
             android:id="@+id/btnOndareak"
-            android:layout_width="260dp"
+            android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="100dp"
             android:layout_marginBottom="8dp"
-            android:text="Ondareak"
+            android:text="@string/text_Ondareak"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +71,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Home"
+        android:text="@string/text_Home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
