añadir clases juegos.java y paradas.java. (finalizado) Añadir archivo para conectar a BD (en proceso)

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".list">
 
+    <!--<Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/txtNombre" />-->
+
 </android.support.constraint.ConstraintLayout>
