--- a/app/src/main/res/layout-land/activity_menu_main.xml
+++ b/app/src/main/res/layout-land/activity_menu_main.xml
@@ -63,7 +63,7 @@
             app:layout_constraintVertical_bias="0.029" />
     </LinearLayout>
 
-    <Button
+    <!--<Button
         android:id="@+id/btnHome"
         android:layout_width="90dp"
         android:layout_height="45dp"
@@ -77,6 +77,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.017" />
+        app:layout_constraintVertical_bias="0.017" />-->
 
 </android.support.constraint.ConstraintLayout>
