--- a/app/src/main/res/layout/activity_menu_main.xml
+++ b/app/src/main/res/layout/activity_menu_main.xml
@@ -39,7 +39,7 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="50dp"
-            android:text="@string/text_Ibilbidea"
+            android:text="@string/text_Galeria"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
