--- a/app/src/main/res/layout/activity_galery.xml
+++ b/app/src/main/res/layout/activity_galery.xml
@@ -17,10 +17,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />-->
+
+   <Button
+       android:id="@+id/btnCamara"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginStart="8dp"
+       android:layout_marginTop="8dp"
+       android:layout_marginEnd="8dp"
+       android:layout_marginBottom="8dp"
+       android:text="@string/text_btnSacarFoto"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.971"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintVertical_bias="0.982" />
+
    <ImageView
        android:id="@+id/imageView"
-       android:layout_width="264dp"
-       android:layout_height="283dp"
+       android:layout_width="265dp"
+       android:layout_height="256dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
@@ -29,5 +46,5 @@
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
-       android:src="@drawable/getxo" />
+       tools:srcCompat="@tools:sample/avatars" />
 </android.support.constraint.ConstraintLayout>
