--- a/app/src/main/res/anim/animation.xml
+++ b/app/src/main/res/anim/animation.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <scale
+    <!--<scale
         android:duration="2000"
         android:fromXScale="2.0"
         android:fromYScale="2.0"
@@ -19,10 +19,10 @@
         android:fromXDelta="0"
         android:fromYDelta="0"
         android:toXDelta="50"
-        android:toYDelta="100" />
+        android:toYDelta="100" />-->
     <alpha
-        android:startOffset="4000"
-        android:duration="2000"
-        android:fromAlpha="1"
-        android:toAlpha="0" />
+        android:startOffset="2000"
+        android:duration="500"
+        android:fromAlpha="0"
+        android:toAlpha="1" />
 </set>
