--- a/app/src/main/res/layout/activity_details_list.xml
+++ b/app/src/main/res/layout/activity_details_list.xml
@@ -9,17 +9,18 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="222dp"
-        android:layout_height="44dp"
+        android:layout_width="548dp"
+        android:layout_height="123dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:ems="10"
-        android:inputType="textMultiLine"
+        android:background="@color/colorAccent"
+        android:text="@string/TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.953" />
 
 </android.support.constraint.ConstraintLayout>
