--- a/app/src/main/res/layout/activity_galery.xml
+++ b/app/src/main/res/layout/activity_galery.xml
@@ -1,50 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".galery">
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    tools:context=".MainActivity">
 
-   <!-- <Button
-        android:id="@+id/btnHome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="266dp"
-        android:text="Home"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />-->
-
-   <Button
-       android:id="@+id/btnCamara"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_marginStart="8dp"
-       android:layout_marginTop="8dp"
-       android:layout_marginEnd="8dp"
-       android:layout_marginBottom="8dp"
-       android:text="@string/text_btnSacarFoto"
-       app:layout_constraintBottom_toBottomOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintHorizontal_bias="0.971"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintVertical_bias="0.982" />
 
    <ImageView
-       android:id="@+id/imageView"
-       android:layout_width="265dp"
-       android:layout_height="256dp"
-       android:layout_marginStart="8dp"
-       android:layout_marginTop="8dp"
-       android:layout_marginEnd="8dp"
-       android:layout_marginBottom="8dp"
-       app:layout_constraintBottom_toBottomOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toTopOf="parent"
-       tools:srcCompat="@tools:sample/avatars" />
-</android.support.constraint.ConstraintLayout>
+       android:id="@+id/miImageView"
+       android:scaleType="centerCrop"
+       android:layout_width="400dp"
+
+       android:layout_height="400dp" />
+
+   <Button
+       android:id="@+id/capture_image"
+       android:text="Image capture"
+       style="@style/Base.Widget.AppCompat.Button.Colored"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent" />
+
+
+
+</LinearLayout>
+
+
+
+
