--- a/app/src/main/res/layout/activity_aukeratu_argazkia_egokia_1.xml
+++ b/app/src/main/res/layout/activity_aukeratu_argazkia_egokia_1.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/idLayout"
     tools:context=".Aukeratuargazkiegokia_1">
 
     <pl.droidsonroids.gif.GifImageView
