--- a/app/src/main/res/anim/animation_scalex2_img3.xml
+++ b/app/src/main/res/anim/animation_scalex2_img3.xml
@@ -4,8 +4,8 @@
         android:duration="2000"
         android:fromXScale="1.0"
         android:fromYScale="1.0"
-        android:pivotX="50%"
-        android:pivotY="50%"
         android:toXScale="1.8"
-        android:toYScale="1.8" />
+        android:toYScale="1.8"
+        android:pivotX="-50%"
+        android:pivotY="100%"/>
 </set>
