--- a/app/src/main/res/layout/activity_aukeratu_argazkia_egokia_1.xml
+++ b/app/src/main/res/layout/activity_aukeratu_argazkia_egokia_1.xml
@@ -7,12 +7,31 @@
     android:id="@+id/idLayout"
     tools:context=".Aukeratuargazkiegokia_1">
 
+    <TextView
+        android:id="@+id/txtDescripcion"
+        android:layout_width="567dp"
+        android:layout_height="92dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        android:text="@string/txtDescripcion"
+        android:background="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.111"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.871" />
+
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/GifImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
@@ -39,10 +58,10 @@
             android:id="@+id/imageButton3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"
             android:layout_weight="1"
-            android:contentDescription="@string/img3" />
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/img3"
+            android:scaleType="centerCrop" />
 
 
     </LinearLayout>
