--- a/app/src/main/res/layout/activity_details_list.xml
+++ b/app/src/main/res/layout/activity_details_list.xml
@@ -7,26 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".details_list">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="526dp"
-        android:layout_height="123dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@color/colorAccent"
-        android:text="@string/TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.953" />
-
     <ImageButton
         android:id="@+id/btnNext"
-        android:layout_width="42dp"
+        android:layout_width="259dp"
         android:layout_height="123dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -37,9 +20,7 @@
         android:text="@string/btnNext"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.953" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
