--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,18 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <!--Habilitar animaciones en las transiciones -->
+        <item name="android:windowContentTransitions">true</item>
+
+        <!-- Deshabilitar sobreposición entre animaciones-->
+        <item name="android:windowAllowEnterTransitionOverlap">false</item>
+        <item name="android:windowAllowReturnTransitionOverlap">false</item>
+
+
+        <!-- Transiciones para entrada, salida y elementos compartidos...-->
+
+        <!-- Habilitar superposición de los elementos compartidos entre transiciones -->
+        <item name="android:windowSharedElementsUseOverlay">true</item>
     </style>
 
 </resources>
