--- a/app/src/main/res/layout/activity_argazkiaaztertu_3.xml
+++ b/app/src/main/res/layout/activity_argazkiaaztertu_3.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="398dp"
-        android:layout_height="195dp"
+        android:layout_width="431dp"
+        android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
