--- a/app/src/main/res/layout/activity_desberdintasuna_bilatu_4.xml
+++ b/app/src/main/res/layout/activity_desberdintasuna_bilatu_4.xml
@@ -74,14 +74,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
+    <ImageButton
         android:id="@+id/hurrengoa"
         android:layout_width="wrap_content"
         android:layout_height="52dp"
         android:layout_marginStart="459dp"
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="4dp"
-        android:text="Hurrengoa"
+        app:srcCompat="@drawable/img_next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
