--- a/app/src/main/res/layout/activity_desberdintasunabilatu_4_argazki2.xml
+++ b/app/src/main/res/layout/activity_desberdintasunabilatu_4_argazki2.xml
@@ -9,42 +9,36 @@
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="518dp"
-        android:layout_height="292dp"
+        android:layout_height="208dp"
         android:layout_marginStart="74dp"
         android:layout_marginTop="37dp"
         android:layout_marginEnd="67dp"
-        android:layout_marginBottom="19dp"
         android:src="@drawable/desberdintasunabilatu_argazki2"
-        app:layout_constraintBottom_toTopOf="@+id/atz_argazki2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/atz_argazki2"
-        android:layout_width="104dp"
+        android:layout_width="60dp"
         android:layout_height="44dp"
         android:layout_marginStart="40dp"
-        android:layout_marginBottom="8dp"
-        android:text="atzera"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="325dp"
+        app:layout_constraintEnd_toStartOf="@+id/hurre_argazki2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:srcCompat="@drawable/img_atzera" />
 
 
-    <Button
+    <ImageButton
         android:id="@+id/hurre_argazki2"
-        android:layout_width="117dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="361dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:text="Hurrengoa"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_width="56dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="400dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toEndOf="@+id/atz_argazki2"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:layout_constraintVertical_bias="0.733" />
+        app:srcCompat="@drawable/img_next" />
 
 </android.support.constraint.ConstraintLayout>
