--- a/app/src/main/res/layout/activity_desberdintasunabilatu_4_argazki3.xml
+++ b/app/src/main/res/layout/activity_desberdintasunabilatu_4_argazki3.xml
@@ -18,28 +18,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/atz_argazki3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginBottom="16dp"
-        android:text="Atzera"
+        app:srcCompat="@drawable/img_atzera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="307dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="16dp"
-        android:text="Amaitu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/atz_argazki3"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+
 
 </android.support.constraint.ConstraintLayout>
