--- a/app/src/main/res/layout/activity_galery.xml
+++ b/app/src/main/res/layout/activity_galery.xml
@@ -1,38 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:id="@+id/pantalla"
     tools:context=".MainActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+       <!-- <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:id="@+id/id_relativo">
 
-   <ImageView
-       android:id="@+id/miImageView"
-       android:layout_width="400dp"
-       android:layout_height="400dp"
-       android:contentDescription="@string/SacarFoto"
-       android:scaleType="centerCrop" />
+        </LinearLayout>-->
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/id_tabla">
 
-   <!--<Button
-       android:id="@+id/capture_image"
-       style="@style/Base.Widget.AppCompat.Button.Colored"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:contentDescription="@string/SacarFoto"
-       android:text="@string/SacarFoto" />-->
+        </TableLayout>
+    </ScrollView>
 
-   <android.support.design.widget.FloatingActionButton
-       android:id="@+id/my_fab"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_gravity="bottom|end"
-       android:layout_margin="16dp"
-       android:src="@drawable/ic_instagram_black_48dp"
-       app:backgroundTint="@color/colorPrimary" />
 
-</LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/my_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="32dp"
+        android:src="@drawable/ic_instagram_black_48dp"
+        android:visibility="visible"
+        app:backgroundTint="@color/colorPrimary" />
+
+</RelativeLayout>
+
+
+
 
 
 
