--- a/app/src/main/res/layout/activity_galery.xml
+++ b/app/src/main/res/layout/activity_galery.xml
@@ -1,33 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    android:id="@+id/pantalla"
-    tools:context=".MainActivity">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-       <!-- <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center_horizontal"
-            android:id="@+id/id_relativo">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#f0f0f0">
 
-        </LinearLayout>-->
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/id_tabla">
-
-        </TableLayout>
-    </ScrollView>
-
-
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:columnWidth="100dp"
+        android:drawSelectorOnTop="true"
+        android:gravity="center"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="5dp"
+        android:focusable="true"
+        android:clickable="true"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/my_fab"
@@ -43,6 +33,13 @@
         app:backgroundTint="@color/colorPrimary" />
 
 </RelativeLayout>
+
+
+
+
+
+
+
 
 
 
