--- a/app/src/main/res/layout/activity_menu_main.xml
+++ b/app/src/main/res/layout/activity_menu_main.xml
@@ -25,8 +25,10 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="180dp"
             android:layout_marginEnd="50dp"
+            android:background="@drawable/rippleeffect"
             android:text="@string/text_Ibilbidea"
             android:textAlignment="center"
+            android:textColor="@color/colorTexto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,8 +41,10 @@
             android:layout_marginStart="50dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="50dp"
+            android:background="@drawable/rippleeffect"
             android:text="@string/text_Galeria"
             android:textAlignment="center"
+            android:textColor="@color/colorTexto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,8 +58,10 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/rippleeffect"
             android:text="@string/text_Ondareak"
             android:textAlignment="center"
+            android:textColor="@color/colorTexto"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.518"
