cambios en modo de cargar juegos (en proceso)

--- a/app/src/main/res/layout-land/activity_menu_main.xml
+++ b/app/src/main/res/layout-land/activity_menu_main.xml
@@ -19,13 +19,15 @@
 
         <Button
             android:id="@+id/btnIbilbidea"
-            android:layout_width="match_parent"
+            android:layout_width="260dp"
             android:layout_height="55dp"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="80dp"
-            android:layout_marginEnd="100dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="180dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/rippleeffect"
             android:text="@string/text_Ibilbidea"
             android:textAlignment="center"
+            android:textColor="@color/colorTexto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,13 +35,15 @@
 
         <Button
             android:id="@+id/btnGaleria"
-            android:layout_width="match_parent"
+            android:layout_width="260dp"
             android:layout_height="55dp"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="100dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/rippleeffect"
             android:text="@string/text_Galeria"
             android:textAlignment="center"
+            android:textColor="@color/colorTexto"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,14 +51,16 @@
 
         <Button
             android:id="@+id/btnOndareak"
-            android:layout_width="match_parent"
+            android:layout_width="260dp"
             android:layout_height="55dp"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="100dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/rippleeffect"
             android:text="@string/text_Ondareak"
             android:textAlignment="center"
+            android:textColor="@color/colorTexto"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.518"
