--- a/app/src/main/res/layout/activity_argazkiaaztertu_3.xml
+++ b/app/src/main/res/layout/activity_argazkiaaztertu_3.xml
@@ -23,19 +23,19 @@
 
     <ImageButton
         android:id="@+id/btnNext"
-        android:layout_width="72dp"
-        android:layout_height="57dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:contentDescription="@string/imagenboton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.984"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.966"
-        app:srcCompat="@drawable/img_next" />
+        app:layout_constraintVertical_bias="0.967"
+        app:srcCompat="@android:drawable/ic_menu_send" />
 
 
 </android.support.constraint.ConstraintLayout>
