--- a/app/src/main/res/layout/activity_aukeratu_argazkia_egokia_1.xml
+++ b/app/src/main/res/layout/activity_aukeratu_argazkia_egokia_1.xml
@@ -18,6 +18,7 @@
         android:layout_weight="1"
         android:text="@string/txtDescripcion"
         android:background="@color/colorAccent"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.111"
@@ -29,6 +30,23 @@
         android:id="@+id/GifImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <ImageButton
+        android:id="@+id/btnNextGame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.984"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.967"
+        app:srcCompat="@android:drawable/ic_menu_send" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
